# web-pamphlet-viewer

./: CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: release.yml
frontend/: .gitignore  README.md  index.html  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: main.ts  vite-env.d.ts
frontend/src/components/: LoadingOverlay.svelte  PaginationControls.svelte  PamphletViewer.svelte  ViewerCanvas.svelte
frontend/src/hooks/: usePamphletViewer.svelte.ts  usePamphletViewer.ts  useTouchGestures.svelte.ts  useTouchGestures.ts
frontend/src/lib/: api-client.ts  canvas-renderer.ts  page-cache.ts  tile-loader.ts  touch-handler.ts  viewport.ts
frontend/src/types/: api.ts  metadata.ts
shared/: README.md  package.json
shared/src/schemas/: index.ts  pamphlet.d.ts  pamphlet.ts
shared/src/types/: index.ts  wasm.d.ts  wasm.ts
test/: README.md  performance-test.js  test-wasm.js
test/output/: metadata.json
wasm/: .gitignore  Cargo.toml  edge-case.test.ts  package.json
wasm/src/: hasher.rs  lib.rs  tiler.rs
workers/: .dev.vars.example  package.json  tsconfig.json  tsconfig.types.json  vite.config.ts  worker-configuration.d.ts  wrangler.toml
workers/public/: wasm
workers/src/: client.tsx  index.ts  index.tsx
workers/src/client/: index.tsx  types.ts
workers/src/client/components/: FileDropZone.tsx  FileList.tsx  ProcessingStatus.tsx  UploadProgress.tsx
workers/src/client/hooks/: useFileUpload.ts  useImageProcessor.ts  useWasm.ts
workers/src/middleware/: auth.ts  cache.ts  metadata.ts
workers/src/routes/: admin.tsx  invalidate.ts  metadata.ts  pamphlet.ts  tile.ts  upload.ts
workers/src/services/: cache.ts  kv.ts  r2.ts  token.ts
workers/src/types/: api.ts  bindings.ts  global.d.ts
