[package]
name = "tile-wasm"
version = "0.1.0"
authors = ["Pamphlet Viewer Team"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Image processing
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "webp"] }

# Hashing
sha2 = "0.10"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Error handling
console_error_panic_hook = { version = "0.1", optional = true }

# Memory optimization
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for size
opt-level = "s"
lto = true
